--- a/sdi-project3.html
+++ b/sdi-project3.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 3 :: SDI TERMNUMBER</title>
+    <title>Louise Whitney :: Project 3 :: SDI 1303</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
     <meta charset="UTF-8" />
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>SDI 1303: Louise Whitney</h1>
     <h2>Project 3</h2>
 </header>
 <article>
@@ -16,7 +16,7 @@
 <p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>March 21, 2013, Louise Whitney</p>
 </footer>
 <script type="text/javascript" src="Whitney_Louise.js"></script>
 </body>
