--- a/sdi-project3.html
+++ b/sdi-project3.html
@@ -11,9 +11,9 @@
     <h2>Project 3</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>I chose to do fairies this week to do something different and less logical and more fun. The story is about two groups of fairies, naughty fairies and good fairies.
+The two fairy groups are fighting each other because the naughty fairies are trying to take over the good fairies and make them all naughty. The naughty fairies convert the lead good fairy but the rest of them fight to stay good. </p>
+
 </article>
 <footer>
     <p>March 21, 2013, Louise Whitney</p>
